ast/parsing/sdp_parser.go
// Code generated from ./Sdp.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parsing // Sdp
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type Sdp struct {
	*antlr.BaseParser
}

var SdpParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func sdpParserInit() {
	staticData := &SdpParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "", "", "'module'", "'#'", "'include'", "'struct'", "'enum'",
		"'optional'", "'required'", "'vector'", "'map'", "'unsigned long'",
		"'long'", "'float'", "'byte'", "'unsigned int'", "'int'", "'double'",
		"'string'", "'void'", "'bool'", "'true'", "'false'", "'interface'",
		"'in'", "'out'", "'{'", "'}'", "'['", "']'", "'('", "')'", "';'", "':'",
		"','", "'='", "'<'", "'>'", "", "", "", "'::'",
	}
	staticData.SymbolicNames = []string{
		"", "WS", "NEW_LINE", "LINE_COMMENT", "BLOCK_COMMENT", "MODULE", "HASH",
		"INCLUDE", "STRUCT", "ENUM", "OPTIONAL", "REQUIRED", "VECTOR", "MAP",
		"ULONG", "LONG", "FLOAT", "BYTE", "UINT", "INT", "DOUBLE", "STRING",
		"VOID", "BOOL", "TRUE", "FALSE", "INTERFACE", "IN", "OUT", "LEFT_BRACE",
		"RIGHT_BRACE", "LEFT_BRACKET", "RIGHT_BRACKET", "LEFT_PAREN", "RIGHT_PAREN",
		"SEMICOLON", "COLON", "COMMA", "EQUAL", "LEFT_ANGLE_BRACKET", "RIGHT_ANGLE_BRACKET",
		"STRING_LITERAL", "NUMBER", "IDENTIFIER", "DOUBLE_COLON",
	}
	staticData.RuleNames = []string{
		"sdp", "includeStatement", "moduleStatement", "structStatement", "fieldStatement",
		"serviceStatement", "serviceMethodStatement", "methodParamStatement",
		"enumStatement", "enumField", "enumLastField", "type", "vectorType",
		"mapType", "moduleType",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// SdpInit initializes any static state used to implement Sdp. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewSdp(). You can call this function if you wish to initialize the static state ahead
// of time.
func SdpInit() {
	staticData := &SdpParserStaticData
	staticData.once.Do(sdpParserInit)
}

// NewSdp produces a new parser instance for the optional input antlr.TokenStream.
func NewSdp(input antlr.TokenStream) *Sdp {
	SdpInit()
	this := new(Sdp)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &SdpParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Sdp.g4"

	return this
}

// Sdp tokens.
const (
	SdpEOF                 = antlr.TokenEOF
	SdpWS                  = 1
	SdpNEW_LINE            = 2
	SdpLINE_COMMENT        = 3
	SdpBLOCK_COMMENT       = 4
	SdpMODULE              = 5
	SdpHASH                = 6
	SdpINCLUDE             = 7
	SdpSTRUCT              = 8
	SdpENUM                = 9
	SdpOPTIONAL            = 10
	SdpREQUIRED            = 11
	SdpVECTOR              = 12
	SdpMAP                 = 13
	SdpULONG               = 14
	SdpLONG                = 15
	SdpFLOAT               = 16
	SdpBYTE                = 17
	SdpUINT                = 18
	SdpINT                 = 19
	SdpDOUBLE              = 20
	SdpSTRING              = 21
	SdpVOID                = 22
	SdpBOOL                = 23
	SdpTRUE                = 24
	SdpFALSE               = 25
	SdpINTERFACE           = 26
	SdpIN                  = 27
	SdpOUT                 = 28
	SdpLEFT_BRACE          = 29
	SdpRIGHT_BRACE         = 30
	SdpLEFT_BRACKET        = 31
	SdpRIGHT_BRACKET       = 32
	SdpLEFT_PAREN          = 33
	SdpRIGHT_PAREN         = 34
	SdpSEMICOLON           = 35
	SdpCOLON               = 36
	SdpCOMMA               = 37
	SdpEQUAL               = 38
	SdpLEFT_ANGLE_BRACKET  = 39
	SdpRIGHT_ANGLE_BRACKET = 40
	SdpSTRING_LITERAL      = 41
	SdpNUMBER              = 42
	SdpIDENTIFIER          = 43
	SdpDOUBLE_COLON        = 44
)

// Sdp rules.
const (
	SdpRULE_sdp                    = 0
	SdpRULE_includeStatement       = 1
	SdpRULE_moduleStatement        = 2
	SdpRULE_structStatement        = 3
	SdpRULE_fieldStatement         = 4
	SdpRULE_serviceStatement       = 5
	SdpRULE_serviceMethodStatement = 6
	SdpRULE_methodParamStatement   = 7
	SdpRULE_enumStatement          = 8
	SdpRULE_enumField              = 9
	SdpRULE_enumLastField          = 10
	SdpRULE_type                   = 11
	SdpRULE_vectorType             = 12
	SdpRULE_mapType                = 13
	SdpRULE_moduleType             = 14
)

// ISdpContext is an interface to support dynamic dispatch.
type ISdpContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllIncludeStatement() []IIncludeStatementContext
	IncludeStatement(i int) IIncludeStatementContext
	AllModuleStatement() []IModuleStatementContext
	ModuleStatement(i int) IModuleStatementContext

	// IsSdpContext differentiates from other interfaces.
	IsSdpContext()
}

type SdpContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySdpContext() *SdpContext {
	var p = new(SdpContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SdpRULE_sdp
	return p
}

func InitEmptySdpContext(p *SdpContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SdpRULE_sdp
}

func (*SdpContext) IsSdpContext() {}

func NewSdpContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SdpContext {
	var p = new(SdpContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SdpRULE_sdp

	return p
}

func (s *SdpContext) GetParser() antlr.Parser { return s.parser }

func (s *SdpContext) EOF() antlr.TerminalNode {
	return s.GetToken(SdpEOF, 0)
}

func (s *SdpContext) AllIncludeStatement() []IIncludeStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IIncludeStatementContext); ok {
			len++
		}
	}

	tst := make([]IIncludeStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IIncludeStatementContext); ok {
			tst[i] = t.(IIncludeStatementContext)
			i++
		}
	}

	return tst
}

func (s *SdpContext) IncludeStatement(i int) IIncludeStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIncludeStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIncludeStatementContext)
}

func (s *SdpContext) AllModuleStatement() []IModuleStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IModuleStatementContext); ok {
			len++
		}
	}

	tst := make([]IModuleStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IModuleStatementContext); ok {
			tst[i] = t.(IModuleStatementContext)
			i++
		}
	}

	return tst
}

func (s *SdpContext) ModuleStatement(i int) IModuleStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IModuleStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IModuleStatementContext)
}

func (s *SdpContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SdpContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SdpContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SdpListener); ok {
		listenerT.EnterSdp(s)
	}
}

func (s *SdpContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SdpListener); ok {
		listenerT.ExitSdp(s)
	}
}

func (s *SdpContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SdpVisitor:
		return t.VisitSdp(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *Sdp) Sdp() (localctx ISdpContext) {
	localctx = NewSdpContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SdpRULE_sdp)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(33)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == SdpHASH {
		{
			p.SetState(30)
			p.IncludeStatement()
		}

		p.SetState(35)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(39)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == SdpMODULE {
		{
			p.SetState(36)
			p.ModuleStatement()
		}

		p.SetState(41)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(42)
		p.Match(SdpEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IIncludeStatementContext is an interface to support dynamic dispatch.
type IIncludeStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	HASH() antlr.TerminalNode
	INCLUDE() antlr.TerminalNode
	STRING_LITERAL() antlr.TerminalNode

	// IsIncludeStatementContext differentiates from other interfaces.
	IsIncludeStatementContext()
}

type IncludeStatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyIncludeStatementContext() *IncludeStatementContext {
	var p = new(IncludeStatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SdpRULE_includeStatement
	return p
}

func InitEmptyIncludeStatementContext(p *IncludeStatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SdpRULE_includeStatement
}

func (*IncludeStatementContext) IsIncludeStatementContext() {}

func NewIncludeStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *IncludeStatementContext {
	var p = new(IncludeStatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SdpRULE_includeStatement

	return p
}

func (s *IncludeStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *IncludeStatementContext) HASH() antlr.TerminalNode {
	return s.GetToken(SdpHASH, 0)
}

func (s *IncludeStatementContext) INCLUDE() antlr.TerminalNode {
	return s.GetToken(SdpINCLUDE, 0)
}

func (s *IncludeStatementContext) STRING_LITERAL() antlr.TerminalNode {
	return s.GetToken(SdpSTRING_LITERAL, 0)
}

func (s *IncludeStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IncludeStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *IncludeStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SdpListener); ok {
		listenerT.EnterIncludeStatement(s)
	}
}

func (s *IncludeStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SdpListener); ok {
		listenerT.ExitIncludeStatement(s)
	}
}

func (s *IncludeStatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SdpVisitor:
		return t.VisitIncludeStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *Sdp) IncludeStatement() (localctx IIncludeStatementContext) {
	localctx = NewIncludeStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SdpRULE_includeStatement)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(44)
		p.Match(SdpHASH)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(45)
		p.Match(SdpINCLUDE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(46)
		p.Match(SdpSTRING_LITERAL)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IModuleStatementContext is an interface to support dynamic dispatch.
type IModuleStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	MODULE() antlr.TerminalNode
	IDENTIFIER() antlr.TerminalNode
	LEFT_BRACE() antlr.TerminalNode
	RIGHT_BRACE() antlr.TerminalNode
	SEMICOLON() antlr.TerminalNode
	AllStructStatement() []IStructStatementContext
	StructStatement(i int) IStructStatementContext
	AllServiceStatement() []IServiceStatementContext
	ServiceStatement(i int) IServiceStatementContext
	AllEnumStatement() []IEnumStatementContext
	EnumStatement(i int) IEnumStatementContext

	// IsModuleStatementContext differentiates from other interfaces.
	IsModuleStatementContext()
}

type ModuleStatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyModuleStatementContext() *ModuleStatementContext {
	var p = new(ModuleStatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SdpRULE_moduleStatement
	return p
}

func InitEmptyModuleStatementContext(p *ModuleStatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SdpRULE_moduleStatement
}

func (*ModuleStatementContext) IsModuleStatementContext() {}

func NewModuleStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ModuleStatementContext {
	var p = new(ModuleStatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SdpRULE_moduleStatement

	return p
}

func (s *ModuleStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *ModuleStatementContext) MODULE() antlr.TerminalNode {
	return s.GetToken(SdpMODULE, 0)
}

func (s *ModuleStatementContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(SdpIDENTIFIER, 0)
}

func (s *ModuleStatementContext) LEFT_BRACE() antlr.TerminalNode {
	return s.GetToken(SdpLEFT_BRACE, 0)
}

func (s *ModuleStatementContext) RIGHT_BRACE() antlr.TerminalNode {
	return s.GetToken(SdpRIGHT_BRACE, 0)
}

func (s *ModuleStatementContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(SdpSEMICOLON, 0)
}

func (s *ModuleStatementContext) AllStructStatement() []IStructStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStructStatementContext); ok {
			len++
		}
	}

	tst := make([]IStructStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStructStatementContext); ok {
			tst[i] = t.(IStructStatementContext)
			i++
		}
	}

	return tst
}

func (s *ModuleStatementContext) StructStatement(i int) IStructStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStructStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStructStatementContext)
}

func (s *ModuleStatementContext) AllServiceStatement() []IServiceStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IServiceStatementContext); ok {
			len++
		}
	}

	tst := make([]IServiceStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IServiceStatementContext); ok {
			tst[i] = t.(IServiceStatementContext)
			i++
		}
	}

	return tst
}

func (s *ModuleStatementContext) ServiceStatement(i int) IServiceStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IServiceStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IServiceStatementContext)
}

func (s *ModuleStatementContext) AllEnumStatement() []IEnumStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IEnumStatementContext); ok {
			len++
		}
	}

	tst := make([]IEnumStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IEnumStatementContext); ok {
			tst[i] = t.(IEnumStatementContext)
			i++
		}
	}

	return tst
}

func (s *ModuleStatementContext) EnumStatement(i int) IEnumStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEnumStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEnumStatementContext)
}

func (s *ModuleStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ModuleStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ModuleStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SdpListener); ok {
		listenerT.EnterModuleStatement(s)
	}
}

func (s *ModuleStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SdpListener); ok {
		listenerT.ExitModuleStatement(s)
	}
}

func (s *ModuleStatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SdpVisitor:
		return t.VisitModuleStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *Sdp) ModuleStatement() (localctx IModuleStatementContext) {
	localctx = NewModuleStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SdpRULE_moduleStatement)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(48)
		p.Match(SdpMODULE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(49)
		p.Match(SdpIDENTIFIER)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(50)
		p.Match(SdpLEFT_BRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(56)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&67109632) != 0 {
		p.SetState(54)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetTokenStream().LA(1) {
		case SdpSTRUCT:
			{
				p.SetState(51)
				p.StructStatement()
			}

		case SdpINTERFACE:
			{
				p.SetState(52)
				p.ServiceStatement()
			}

		case SdpENUM:
			{
				p.SetState(53)
				p.EnumStatement()
			}

		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(58)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(59)
		p.Match(SdpRIGHT_BRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(60)
		p.Match(SdpSEMICOLON)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStructStatementContext is an interface to support dynamic dispatch.
type IStructStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	STRUCT() antlr.TerminalNode
	IDENTIFIER() antlr.TerminalNode
	LEFT_BRACE() antlr.TerminalNode
	RIGHT_BRACE() antlr.TerminalNode
	SEMICOLON() antlr.TerminalNode
	AllFieldStatement() []IFieldStatementContext
	FieldStatement(i int) IFieldStatementContext

	// IsStructStatementContext differentiates from other interfaces.
	IsStructStatementContext()
}

type StructStatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStructStatementContext() *StructStatementContext {
	var p = new(StructStatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SdpRULE_structStatement
	return p
}

func InitEmptyStructStatementContext(p *StructStatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SdpRULE_structStatement
}

func (*StructStatementContext) IsStructStatementContext() {}

func NewStructStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StructStatementContext {
	var p = new(StructStatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SdpRULE_structStatement

	return p
}

func (s *StructStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StructStatementContext) STRUCT() antlr.TerminalNode {
	return s.GetToken(SdpSTRUCT, 0)
}

func (s *StructStatementContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(SdpIDENTIFIER, 0)
}

func (s *StructStatementContext) LEFT_BRACE() antlr.TerminalNode {
	return s.GetToken(SdpLEFT_BRACE, 0)
}

func (s *StructStatementContext) RIGHT_BRACE() antlr.TerminalNode {
	return s.GetToken(SdpRIGHT_BRACE, 0)
}

func (s *StructStatementContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(SdpSEMICOLON, 0)
}

func (s *StructStatementContext) AllFieldStatement() []IFieldStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFieldStatementContext); ok {
			len++
		}
	}

	tst := make([]IFieldStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFieldStatementContext); ok {
			tst[i] = t.(IFieldStatementContext)
			i++
		}
	}

	return tst
}

func (s *StructStatementContext) FieldStatement(i int) IFieldStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFieldStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFieldStatementContext)
}

func (s *StructStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StructStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StructStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SdpListener); ok {
		listenerT.EnterStructStatement(s)
	}
}

func (s *StructStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SdpListener); ok {
		listenerT.ExitStructStatement(s)
	}
}

func (s *StructStatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SdpVisitor:
		return t.VisitStructStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *Sdp) StructStatement() (localctx IStructStatementContext) {
	localctx = NewStructStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SdpRULE_structStatement)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(62)
		p.Match(SdpSTRUCT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(63)
		p.Match(SdpIDENTIFIER)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(64)
		p.Match(SdpLEFT_BRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(68)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == SdpNUMBER {
		{
			p.SetState(65)
			p.FieldStatement()
		}

		p.SetState(70)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(71)
		p.Match(SdpRIGHT_BRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(72)
		p.Match(SdpSEMICOLON)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFieldStatementContext is an interface to support dynamic dispatch.
type IFieldStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllNUMBER() []antlr.TerminalNode
	NUMBER(i int) antlr.TerminalNode
	Type_() ITypeContext
	IDENTIFIER() antlr.TerminalNode
	SEMICOLON() antlr.TerminalNode
	OPTIONAL() antlr.TerminalNode
	REQUIRED() antlr.TerminalNode
	EQUAL() antlr.TerminalNode
	STRING_LITERAL() antlr.TerminalNode
	TRUE() antlr.TerminalNode
	FALSE() antlr.TerminalNode

	// IsFieldStatementContext differentiates from other interfaces.
	IsFieldStatementContext()
}

type FieldStatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFieldStatementContext() *FieldStatementContext {
	var p = new(FieldStatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SdpRULE_fieldStatement
	return p
}

func InitEmptyFieldStatementContext(p *FieldStatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SdpRULE_fieldStatement
}

func (*FieldStatementContext) IsFieldStatementContext() {}
